--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -60,7 +60,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository_owner }}/nonameproject-web
+          images: ghcr.io/${{ github.repository_owner }}/frontend
           tags: |
             type=sha,format=short,prefix=sha-
             type=ref,event=branch
