--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -1,4 +1,4 @@
-name: frontend CI + Publish (GHCR)
+name: frontend CI + Publish (GHCR) + GitOps
 
 on:
   pull_request:
@@ -37,14 +37,28 @@ jobs:
       - name: Build
         run: npm run build
 
-  frontend_publish_image:
+  publish_image:
     needs: test
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 20
+
+    outputs:
+      short_sha: ${{ steps.img.outputs.short_sha }}
+      image: ${{ steps.img.outputs.image }}
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Compute short sha + image
+        id: img
+        run: |
+          set -euo pipefail
+          SHORT_SHA="${GITHUB_SHA::7}"
+          OWNER="$(echo "${GITHUB_REPOSITORY_OWNER}" | tr '[:upper:]' '[:lower:]')"
+
+          echo "short_sha=${SHORT_SHA}" >> "$GITHUB_OUTPUT"
+          echo "image=ghcr.io/${OWNER}/frontend:sha-${SHORT_SHA}" >> "$GITHUB_OUTPUT"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -56,42 +70,25 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Docker metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository_owner }}/frontend
-          tags: |
-            type=sha,format=short,prefix=sha-
-            type=ref,event=branch
-
-      - name: Build image
+      - name: Build and push image
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: |
+            ${{ steps.img.outputs.image }}
+            ghcr.io/${{ github.repository_owner }}/frontend:master
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: Smoke test container
-        shell: bash
         run: |
           set -euo pipefail
 
-          # Берём именно sha-тег (тот, что привязан к текущему коммиту)
-          IMAGE="$(printf '%s\n' "${{ steps.meta.outputs.tags }}" | grep -E ':sha-[0-9a-f]+' | head -n 1)"
-          if [[ -z "${IMAGE}" ]]; then
-            echo "Could not find sha tag in metadata tags:"
-            printf '%s\n' "${{ steps.meta.outputs.tags }}"
-            exit 1
-          fi
-
+          IMAGE="${{ steps.img.outputs.image }}"
           echo "Testing image: ${IMAGE}"
 
-          # Cleanup даже если что-то упадет
           cleanup() {
             docker logs fe --tail=200 || true
             docker rm -f fe >/dev/null 2>&1 || true
@@ -100,7 +97,6 @@ jobs:
 
           docker run -d --name fe -p 8080:80 "${IMAGE}"
 
-          # Ждём, пока контейнер начнёт отдавать HTTP 2xx
           for i in {1..30}; do
             if curl -fsS http://localhost:8080/ >/dev/null; then
               echo "OK: frontend responds"
@@ -111,3 +107,63 @@ jobs:
 
           echo "FAIL: frontend did not respond in time"
           exit 1
+
+  gitops_orchestrator_pr:
+    needs: publish_image
+    if: github.event_name != 'pull_request'
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+
+    steps:
+      - name: Checkout GitOps repo
+        uses: actions/checkout@v4
+        with:
+          repository: StillNotEnough/shpora-ai-orchestrator-prod
+          token: ${{ secrets.ORCHESTRATOR_TOKEN }}
+          path: orchestrator
+          ref: main
+
+      - name: Install yq
+        run: |
+          set -euo pipefail
+          sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+          sudo chmod +x /usr/local/bin/yq
+          yq --version
+
+      - name: Update frontend image in deployment
+        env:
+          FILE_PATH: orchestrator/k8s/base/frontend/deployment.yaml
+          IMAGE: ${{ needs.publish_image.outputs.image }}
+        run: |
+          set -euo pipefail
+          test -f "${FILE_PATH}"
+
+          yq -i '(.spec.template.spec.containers[] | select(.name=="frontend") | .image) = strenv(IMAGE)' "${FILE_PATH}"
+
+          echo "Updated image to:"
+          yq '.spec.template.spec.containers[] | select(.name=="frontend") | .image' "${FILE_PATH}"
+
+      - name: Create PR to GitOps repo
+        id: cpr
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.ORCHESTRATOR_TOKEN }}
+          path: orchestrator
+          branch: bump/frontend-${{ needs.publish_image.outputs.short_sha }}
+          base: main
+          commit-message: "chore(frontend): bump image to sha-${{ needs.publish_image.outputs.short_sha }}"
+          title: "chore(frontend): bump image to sha-${{ needs.publish_image.outputs.short_sha }}"
+          body: |
+            Automated PR from frontend CI.
+            Image: ${{ needs.publish_image.outputs.image }}
+          labels: automated, frontend
+
+      - name: Enable auto-merge for PR
+        if: steps.cpr.outputs.pull-request-number != ''
+        env:
+          GH_TOKEN: ${{ secrets.ORCHESTRATOR_TOKEN }}
+        run: |
+          set -euo pipefail
+          gh pr merge ${{ steps.cpr.outputs.pull-request-number }} \
+            --repo StillNotEnough/shpora-ai-orchestrator-prod \
+            --squash --auto
